# myblob

./: .env.example  .gitignore  CLEANUP_REPORT.md  CODE_OPTIMIZATION_SUMMARY.md  CODE_STANDARDS.md  DESIGN.md  IMAGE_EDITOR_README.md  IMAGE_EDITOR_UPDATE.md  POSTGRES_FIX_SUMMARY.md  PRODUCT.md  PROJECT-PLAN.md  README.md  XIAOMI_MIMO_APPLICATION.md  body.json  demo.md  docker-compose.server.yml  fix_postgres_connections.ps1  manage.py  nginx.conf  optimization-plan.md  package.json  pnpm-workspace.yaml  populate_announcements_ads.py  populate_membership_data.py  populate_modal_announcement.py  populate_site_config.py  pyproject.toml  restart_postgres.ps1  skills-lock.json  start-rsshub.bat  start_django.ps1  管理后台配置指引.md  配置指南.md  项目功能状态报告.md
Myblob/: asgi.py  authentication.py  celery.py  settings.py  settings_backup.py  urls.py  wsgi.py
account/: models.py
accounts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
album/: models.py
apigateway/: admin.py  models.py  serializers.py  urls.py  views.py
blog/: admin.py  models.py  serializers.py  urls.py  views.py
blog-frontend/: ARCHITECTURE.md  README.md  SHORTCUTS.md  index.html  package-lock.json  package.json  payload.json  pnpm-lock.yaml  test.html  tsconfig.json  vite.config.ts
comments/: admin.py  models.py  serializers.py  urls.py  views.py
core/: admin.py  apps.py  models.py  serializers.py  urls.py  verification.py  views.py
docs/: frontend-theme-optimization.md
filemanager/: admin.py  models.py  serializers.py  urls.py  views.py
interactions/: __init__.py  admin.py  apps.py  (+4 more)
(+513 files in other folders)
